--- a/src/morphingprojections_job_projection/environment/environment-minikube.yaml
+++ b/src/morphingprojections_job_projection/environment/environment-minikube.yaml
@@ -4,10 +4,10 @@ mongodb:
   authentication-database: admin
   database: configuration
   username: root
-  password: password
+  password: q8SFbdesFv
 
 minio:
-  host: gsdpi-hl.default.svc.cluster.local
+  host: uniovi-hl.default.svc.cluster.local
   port: 9000
-  access_key: gl8rbGORHSpxmg1V
-  secret_key: 8WphDMckYqRb29s43SzA4trsV2GgaQRc
+  access_key: WRc6I2ubSt9iZ0P6
+  secret_key: AOm7m0CaFaeO5RW74jhzYEvxB6A0FK4P
