--- a/src/morphingprojections_job_projection/environment/environment-avib.yaml
+++ b/src/morphingprojections_job_projection/environment/environment-avib.yaml
@@ -4,7 +4,7 @@ mongodb:
   authentication-database: admin
   database: configuration
   username: root
-  password: password
+  password: 46cfdg1oXL
 
 minio:
   host: uniovi-hl.default.svc.cluster.local
